[gd_scene load_steps=34 format=3 uid="uid://cvs5qadf2xvor"]

[ext_resource type="Script" uid="uid://0fqsdmh2dnpn" path="res://scenes/world/monsters/test_monster.gd" id="1_cyjkw"]
[ext_resource type="Resource" uid="uid://4ygv5awlfsd3" path="res://resources/monsters/units/goblin/goblin_stats.tres" id="2_a5sn0"]
[ext_resource type="Script" uid="uid://bcmlgj2w55p8f" path="res://common/state_machine.gd" id="3_jgon0"]
[ext_resource type="Script" uid="uid://qaxxapkdpf3c" path="res://scenes/world/monsters/states/monster_state_idle.gd" id="4_xhton"]
[ext_resource type="Script" uid="uid://duhj7yqbk0ef0" path="res://scenes/world/monsters/states/monster_state_wandering.gd" id="5_1b7pw"]
[ext_resource type="Script" uid="uid://cju0l6y8aayaq" path="res://scenes/world/monsters/states/monster_state_attacking.gd" id="6_nk10w"]
[ext_resource type="Script" uid="uid://2ys706connp" path="res://scenes/world/monsters/states/monster_state_engage.gd" id="7_iillr"]
[ext_resource type="Script" uid="uid://dnx6f66l560i1" path="res://scenes/world/monsters/states/monster_state_dying.gd" id="8_4sja1"]
[ext_resource type="Script" uid="uid://chixtoay5fbmj" path="res://scenes/world/units/components/MovementComponent.gd" id="9_dlwky"]
[ext_resource type="Script" uid="uid://bgjqylyg8052t" path="res://scenes/world/units/components/HealthComponent.gd" id="10_ii424"]
[ext_resource type="Script" uid="uid://bu625gum4lcu2" path="res://scenes/world/units/components/AttackComponent.gd" id="11_3alc0"]
[ext_resource type="Texture2D" uid="uid://bmsh0s6amr1u8" path="res://assets/resources/unit_test.png" id="12_ekv16"]
[ext_resource type="Script" uid="uid://c7ftxhy6tmrtt" path="res://scenes/world/units/animation_generator.gd" id="13_bkkxc"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_xb5ci"]
radius = 24.0
height = 60.0

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_xb5ci"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath("AnimatedSprite2D:flip_h")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath("Components/HealthComponent:max_hp")
properties/2/spawn = true
properties/2/replication_mode = 1
properties/3/path = NodePath("Components/HealthComponent:current_hp")
properties/3/spawn = true
properties/3/replication_mode = 1

[sub_resource type="AtlasTexture" id="AtlasTexture_l2a1g"]
atlas = ExtResource("12_ekv16")
region = Rect2(0, 70, 740, 730)

[sub_resource type="AtlasTexture" id="AtlasTexture_h141o"]
atlas = ExtResource("12_ekv16")
region = Rect2(820, 70, 740, 730)

[sub_resource type="AtlasTexture" id="AtlasTexture_hyo0f"]
atlas = ExtResource("12_ekv16")
region = Rect2(1640, 70, 740, 730)

[sub_resource type="AtlasTexture" id="AtlasTexture_12525"]
atlas = ExtResource("12_ekv16")
region = Rect2(2460, 70, 740, 730)

[sub_resource type="AtlasTexture" id="AtlasTexture_t36qh"]
atlas = ExtResource("12_ekv16")
region = Rect2(0, 870, 740, 730)

[sub_resource type="AtlasTexture" id="AtlasTexture_5qn0t"]
atlas = ExtResource("12_ekv16")
region = Rect2(820, 870, 740, 730)

[sub_resource type="AtlasTexture" id="AtlasTexture_bud83"]
atlas = ExtResource("12_ekv16")
region = Rect2(1640, 870, 740, 730)

[sub_resource type="AtlasTexture" id="AtlasTexture_vymlm"]
atlas = ExtResource("12_ekv16")
region = Rect2(2460, 870, 740, 730)

[sub_resource type="AtlasTexture" id="AtlasTexture_xb5ci"]
atlas = ExtResource("12_ekv16")
region = Rect2(0, 70, 740, 730)

[sub_resource type="AtlasTexture" id="AtlasTexture_m1kc6"]
atlas = ExtResource("12_ekv16")
region = Rect2(820, 70, 740, 730)

[sub_resource type="AtlasTexture" id="AtlasTexture_nmuja"]
atlas = ExtResource("12_ekv16")
region = Rect2(1640, 70, 740, 730)

[sub_resource type="AtlasTexture" id="AtlasTexture_hnc1u"]
atlas = ExtResource("12_ekv16")
region = Rect2(2460, 70, 740, 730)

[sub_resource type="AtlasTexture" id="AtlasTexture_6hfjt"]
atlas = ExtResource("12_ekv16")
region = Rect2(0, 870, 740, 730)

[sub_resource type="SpriteFrames" id="SpriteFrames_g3gjs"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l2a1g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h141o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hyo0f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_12525")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t36qh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5qn0t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bud83")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vymlm")
}],
"loop": true,
"name": &"default",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xb5ci")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m1kc6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nmuja")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hnc1u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6hfjt")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_17xdk"]
radius = 2000.0

[sub_resource type="CircleShape2D" id="CircleShape2D_muntq"]
radius = 60.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2dusl"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3i26h"]
bg_color = Color(0.340192, 0.698577, 0.227424, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)

[node name="TestCharacter" type="CharacterBody2D" node_paths=PackedStringArray("movement_component", "health_component", "attack_component", "animation", "nav_agent")]
collision_layer = 19
collision_mask = 17
input_pickable = true
script = ExtResource("1_cyjkw")
stats = ExtResource("2_a5sn0")
movement_component = NodePath("Components/MovementComponent")
health_component = NodePath("Components/HealthComponent")
attack_component = NodePath("Components/AttackComponent")
animation = NodePath("AnimatedSprite2D")
nav_agent = NodePath("NavigationAgent2D")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("3_jgon0")
initial_state = NodePath("Idle")
metadata/_custom_type_script = "uid://bcmlgj2w55p8f"

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("4_xhton")

[node name="Wandering" type="Node" parent="StateMachine"]
script = ExtResource("5_1b7pw")

[node name="Attacking" type="Node" parent="StateMachine"]
script = ExtResource("6_nk10w")

[node name="Engage" type="Node" parent="StateMachine"]
script = ExtResource("7_iillr")

[node name="Dying" type="Node" parent="StateMachine"]
script = ExtResource("8_4sja1")

[node name="Components" type="Node" parent="."]

[node name="MovementComponent" type="Node" parent="Components" node_paths=PackedStringArray("testCharacter")]
script = ExtResource("9_dlwky")
testCharacter = NodePath("../..")

[node name="HealthComponent" type="Node" parent="Components"]
script = ExtResource("10_ii424")

[node name="AttackComponent" type="Node" parent="Components"]
script = ExtResource("11_3alc0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2)
shape = SubResource("CapsuleShape2D_xb5ci")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_xb5ci")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_desired_distance = 25.0
target_desired_distance = 35.0
avoidance_enabled = true
radius = 8.0
neighbor_distance = 100.0
avoidance_priority = 0.5

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.07, 0.07)
sprite_frames = SubResource("SpriteFrames_g3gjs")
animation = &"walk"
autoplay = "idle"
script = ExtResource("13_bkkxc")

[node name="Label" type="Label" parent="."]
visible = false
offset_left = -457.143
offset_top = -528.571
offset_right = 456.857
offset_bottom = -363.571
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 120
text = "State"
horizontal_alignment = 1

[node name="DetectionRange" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 16
collision_mask = 16
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionRange"]
shape = SubResource("CircleShape2D_17xdk")
metadata/_edit_lock_ = true

[node name="AttackRange" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 18
collision_mask = 2
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackRange"]
shape = SubResource("CircleShape2D_muntq")
metadata/_edit_lock_ = true

[node name="HPBar" type="ProgressBar" parent="."]
unique_name_in_owner = true
offset_left = -34.0
offset_top = -56.0
offset_right = 34.0
offset_bottom = -46.0
theme_override_styles/background = SubResource("StyleBoxFlat_2dusl")
theme_override_styles/fill = SubResource("StyleBoxFlat_3i26h")
show_percentage = false

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="velocity_computed" from="NavigationAgent2D" to="Components/MovementComponent" method="_on_navigation_agent_2d_velocity_computed"]
